--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.0",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -18,6 +19,7 @@
     "@supabase/supabase-js": "^2.40.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
